@@ -107,6 +107,7 @@ tests_require = [
     "celery",
     "django-celery",
     "Flask>=0.8",
+    "starlette",
     "logbook",
     "mock",
     "pep8",
@@ -138,7 +139,7 @@ except ImportError:
     tests_require += ["psycopg2"]
 
 if sys.version_info >= (3, 5):
-    tests_require += ["aiohttp", "tornado", "pytest-asyncio", "pytest-mock"]
+    tests_require += ["aiohttp", "tornado", "starlette", "pytest-asyncio", "pytest-mock"]
 
 install_requires = ["urllib3", "certifi", "cachetools;python_version=='2.7'"]
 
@@ -178,8 +179,9 @@ setup_kwargs = dict(
     extras_require={
         "tests": tests_require,
         "flask": ["blinker"],
-        "asyncio": ["aiohttp"],
+        "aiohttp": ["aiohttp"],
         "tornado": ["tornado"],
+        "starlette": ["starlette", "flask", "requests"],
         "opentracing": ["opentracing>=2.0.0"],
     },
     cmdclass={"test": PyTest},
