@@ -1,0 +1,4 @@
+starlette==0.13.0
+requests==2.22.0
+flask==1.1.1
+-r requirements-base.txt
