@@ -1,0 +1,1 @@
+export PYTEST_MARKER="-m starlette"
